main/default/objects/Quality_Site_Assessment_Note__c/Quality_Site_Assessment_Note__c.object-meta.xml
<CustomObject>
    <label>Quality Site Assessment Note</label>
    <nameField>
        <label>Quality Site Assessment Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Site Assessment Note</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>