main/default/objects/Quality_Site_Assessment_Note__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot;+Image_Data__c, &quot;Green&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>