main/default/objects/Quality_Site_Assessment_Note__c/fields/Image_Data__c.field-meta.xml
<CustomField>
    <fullName>Image_Data__c</fullName>
    <label>Image Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>