main/default/objects/Quality_Site_Assessment_Note__c/fields/QSA_Name__c.field-meta.xml
<CustomField>
    <fullName>QSA_Name__c</fullName>
    <label>QSA Name</label>
    <referenceTo>Quality_Site_Assessment__c</referenceTo>
    <relationshipLabel>Quality Site Assessment Note</relationshipLabel>
    <relationshipName>Quality_Site_Assessment_Note</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>